k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: interview-hub-ns1
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: interview-hub-ns1
spec:
  selector:
    app: core
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
  namespace: interview-hub-ns1
spec:
  selector:
    app: calendar-service
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: interview-hub-ns1
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: interview-hub-ns1
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
